[package]
name = "jinkela"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["protobuf"]
repository = "https://github.com/busyjay/jinkela"
homepage = "https://github.com/busyjay/jinkela"
documentation = "https://docs.rs/jinkela"
description = "A abstraction to make peace between multiple protobuf implementations."
categories = ["encoding"]

[workspace]
members = ["derive", "build"]

[features]
default = []
protobuf-codec = ["protobuf", "protobuf-codegen-pure"]
prost-codec = ["prost", "prost-build", "bytes", "quick-error", "jinkela-derive"]

[build-dependencies]
protobuf-codegen-pure = { version = "2.7", optional = true }
prost-build = { version = "0.5", optional = true }

[dependencies]
bytes = { version = "0.4.11", optional = true }
lazy_static = "1.3.0"
prost = { version = "0.5", optional = true }
protobuf = { version = "2", optional = true }
quick-error = { version = "1.2", optional = true }
jinkela-derive = { path = "derive", optional = true }
